fixed bug where clicking on different buttons made a search start, took away some text on the orgs volunteer positions claimed page, made some buttons stretch the width of the container

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,11 @@ p {
 }
 /* fonts needed for all of the headers and body text */
 
+
+
+
+
+
 .landingpagebuttons {
 	padding-top: 145px;
 	margin-right: 20px;
@@ -466,7 +471,7 @@ background-color: #D4D4D4;
 
 .btn-lg {
     display: block;
-    width:92rem;
+    width: 100%;
     float: left;
 }
 
